# wahlergebnisse

./: .gitignore  README.md  Wahlergebnis-Crawler.ipynb  convert_to_json.py  elections_germany.200207.json  extend_data.py  filter.py  get_data.sh  governments.json  missing_occasions.py  pyproject.toml  wahlergebnisse.extended.json  wahlergebnisse.json
crawler/: __main__.py  chronologie.py  fetch.py  parse.py  schema.py
tests/: test_parse.py  test_schema.py
tests/fixtures/: btw_2025.html  btw_2025_absolutestimmen.html  ltw_by_2023.html  ltw_by_2023_absolutestimmen.html  ltw_th_2024.html  ltw_th_2024_absolutestimmen.html
v2/: main.py
