[project]
name = "wahlergebnisse-crawler"
version = "0.1.0"
description = "Crawler for German election results from the Tagesschau Wahlarchiv"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "requests>=2.31",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
